--- a/index.html
+++ b/index.html
@@ -12,8 +12,68 @@
 </head>
 <body>
     <div id="app">
-        
-
+        <div class="myBackground">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 app-style p-0">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-4 p-0">
+                                    <nav class="d-flex flex-row justify-content-between align-items-center myh-2">
+                                        <div class="d-flex flex-row align-items-center ps-2">
+                                            <div class="circle">
+                                                <i class="fa-solid fa-bell-slash"></i>
+                                            </div>
+                                            <p class="m-0">Sofia</p>
+                                        </div>
+                                        <div class="d-flex">
+                                            <div class="icons">
+                                                <i class="fa-solid fa-circle-notch"></i>
+                                            </div>
+                                            <div class="icons">
+                                                <i class="fa-solid fa-message"></i>
+                                            </div>
+                                            <div class="icons">
+                                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                                            </div>
+                                        </div>
+                                    </nav>
+                                    <div class="d-flex flex-row align-items-center myh-2 notification-bg ps-2">
+                                        <div class="circle">
+                                            <i class="fa-solid fa-bell-slash icon-color"></i>
+                                        </div>
+                                        <div>
+                                            <p class="m-0">Ricevi notifiche di nuovi messaggi</p>
+                                            <a class="myfont-size" href="">Attiva notifiche Desktop</a>
+                                        </div>
+                                    </div>
+                                    <div class="myh-2 mx-2 d-flex align-items-center">
+                                        <div class="input-group">
+                                            <span class="input-group-text bg-white" id="basic-addon1"><i style="font-size: 1rem;" class="fa-solid fa-magnifying-glass"></i></span>
+                                            <input type="text" class="form-control bg-white" placeholder="Cerca o inizia una nuova chat" aria-label="Username" aria-describedby="basic-addon1">
+                                        </div>
+                                    </div>
+                                    <div class="box-contatti bg-white overflow-auto" style="border-bottom-left-radius: 10px;">
+                                        <div class="d-flex flex-row align-items-center myh-2 ps-2">
+                                            <div class="circle">
+                                                <i class="fa-solid fa-bell-slash icon-color"></i>
+                                            </div>
+                                            <div>
+                                                <p class="m-0">Ricevi notifiche di nuovi messaggi</p>
+                                                <p class="m-0 myfont-size">Ultimo messaggio inviato</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    ciao
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./main.js"></script>
