--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                             <i class="icon-color fa-solid fa-bell-slash"></i>
                                         </div>
                                         <div>
-                                            <p class="m-0">Ricevi notifiche di nuovi messaggi</p>
+                                            <p class="m-0 fw-bold">Ricevi notifiche di nuovi messaggi</p>
                                             <a class="myfont-size" href="">Attiva notifiche Desktop</a>
                                         </div>
                                     </div>
@@ -80,38 +80,43 @@
                                         </div>
                                         <div class="d-flex">
                                             <div class="icons">
-                                                <i class="fa-solid fa-circle-notch"></i>
+                                                <i class="fa-solid fa-magnifying-glass"></i>
                                             </div>
                                             <div class="icons">
-                                                <i class="fa-solid fa-message"></i>
+                                                <i class="fa-solid fa-paperclip"></i>
                                             </div>
                                             <div class="icons">
                                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                                             </div>
                                         </div>
                                     </nav>
-                                    <div class="box-conversazioni overflow-auto">
-
+                                    <div class="box-conversazioni overflow-auto p-5">
+                                        <!-- <template> -->
+                                            <div class="container">
+                                                <div class="row">
+                                                    <div class="col-12 d-flex justify-content-end">
+                                                        <div class="box-mssg position-relative my-2">
+                                                            <p class="word-break">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores ad placeat ex perspiciatis quibusdam tenetur assumenda consectetur consequatur suscipit quaerat? ciaoooooooooooooooooooooooooooooooooooooooooooooooo</p>
+                                                            <p class="position-absolute bottom-0 end-0 my-1 mx-2 my-font-color" style="font-size: 0.7rem;">12:00</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        <!-- </template> -->
                                     </div>
-                                    <nav class="d-flex flex-row justify-content-between align-items-center myh-2">
-                                        <div class="d-flex flex-row align-items-center ps-2">
-                                            <div class="circle">
-                                                <img class="object-fit-cover w-100" src="./img/avatar_io.jpg" alt="">
+                                    <div class="container">
+                                        <div class="d-flex flex-row align-items-center myh-2">
+                                            <div class="icons me-4">
+                                                <i class="fa-regular fa-face-smile"></i>
                                             </div>
-                                            <p class="m-0 fw-bold fs-4">Sofia</p>
-                                        </div>
-                                        <div class="d-flex">
-                                            <div class="icons">
-                                                <i class="fa-solid fa-circle-notch"></i>
+                                            <div class="w-100">
+                                                <input type="text" id="inputMessage" class="form-control" placeholder="Scrivi un messaggio" aria-describedby="messages">
                                             </div>
-                                            <div class="icons">
-                                                <i class="fa-solid fa-message"></i>
-                                            </div>
-                                            <div class="icons">
-                                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                                            <div class="icons ms-4">
+                                                <i class="fa-solid fa-microphone"></i>
                                             </div>
                                         </div>
-                                    </nav>
+                                    </div>
                                 </div>
                             </div>
                         </div>
