--- a/index.html
+++ b/index.html
@@ -97,17 +97,19 @@
                                     </nav>
                                     <div class="box-conversazioni overflow-auto p-5">
                                         <template v-for="contact, i in contacts">
-                                            <template v-for="msg, i in contact.messages">
-                                                <div class="container">
-                                                    <div class="row">
-                                                        <div class="col-12 d-flex justify-content-end">
-                                                            <div class="box-mssg position-relative my-2" v-if="msg.status == 'received'">
-                                                                <p class="word-break">{{ msg.message }}</p>
-                                                                <p class="position-absolute bottom-0 end-0 my-1 mx-2 my-font-color" style="font-size: 0.7rem;">12:00</p>
+                                            <template v-for="msg, index in contact.messages">
+                                                <template v-if="i == activeConv">
+                                                    <div class="container">
+                                                        <div class="row">
+                                                            <div class="col-12 d-flex my-1" :class="{'justify-content-end' : msg.status == 'sent', 'justify-content-start' : msg.status == 'received'}">
+                                                                <div class="box-mssg position-relative my-2" :class="{'mssg-sent' : msg.status == 'sent', 'mssg-received' : msg.status == 'received'}">
+                                                                    <p class="word-break">{{ msg.message }}</p>
+                                                                    <p class="position-absolute bottom-0 end-0 my-1 mx-2 my-font-color" style="font-size: 0.7rem;">12:00</p>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </template>
                                             </template>
                                         </template>
                                     </div>
