--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -18,6 +19,7 @@
                     <div class="col-12 app-style p-0">
                         <div class="container">
                             <div class="row">
+                                <!-- sezione profilo personale -->
                                 <div class="col-4 p-0">
                                     <nav class="d-flex flex-row justify-content-between align-items-center myh-2">
                                         <div class="d-flex flex-row align-items-center ps-2">
@@ -38,6 +40,7 @@
                                             </div>
                                         </div>
                                     </nav>
+                                    <!-- sezione notifiche -->
                                     <div class="d-flex flex-row align-items-center myh-2 notification-bg ps-2">
                                         <div class="circle">
                                             <i class="icon-color fa-solid fa-bell-slash"></i>
@@ -47,12 +50,14 @@
                                             <a class="myfont-size" href="">Attiva notifiche Desktop</a>
                                         </div>
                                     </div>
+                                    <!-- sezione searchbar -->
                                     <div class="myh-2 mx-2 d-flex align-items-center">
                                         <div class="input-group">
                                             <span class="input-group-text bg-white" id="basic-addon1"><i style="font-size: 1rem;" class="fa-solid fa-magnifying-glass"></i></span>
                                             <input v-model="inputValueSearch" type="text" class="form-control bg-white" placeholder="Cerca o inizia una nuova chat" aria-label="Username" aria-describedby="basic-addon1">
                                         </div>
                                     </div>
+                                    <!-- sezione contatti -->
                                     <div class="box-contatti bg-white overflow-auto" style="border-bottom-left-radius: 10px;">
                                         <template v-for="contact, i in filteredContacts">
                                             <!-- <template v-for="msg, index in contact.messages">
@@ -67,7 +72,7 @@
                                                                 <p class="m-0 myfont-size my-font-color">{{ lastElement(contact.messages).message }}</p>
                                                             </div>
                                                             <div>
-                                                                <p class="position-absolute top-0 end-0 my-2 mx-3 my-font-color" style="font-size: 0.7rem;">12:00</p>
+                                                                <p class="position-absolute top-0 end-0 my-2 mx-3 my-font-color" style="font-size: 0.7rem;">{{ lastElement(contact.messages).time }}</p>
                                                             </div>
                                                         </div>
                                                     
@@ -76,7 +81,7 @@
                                         </template>
                                     </div>
                                 </div>
-                                <!-- parte destra -->
+                                <!-- sezione conversazione header -->
                                 <div class="col-8">
                                     <nav class="d-flex flex-row justify-content-between align-items-center myh-2">
                                         <div class="d-flex flex-row align-items-center ps-2">
@@ -85,7 +90,10 @@
                                                     <div class="circle">
                                                         <img class="object-fit-cover w-100" :src="contact.avatar" alt="">
                                                     </div>
-                                                    <p class="m-0 fw-bold fs-4">{{ contact.name }}</p>
+                                                    <div>
+                                                        <p class="m-0 fw-bold fs-4">{{ contact.name }}</p>
+                                                        <p class="m-0 myfont-size">{{ contact.messages[contact.messages.length - 1].date }}</p>
+                                                    </div>
                                                 </template>
                                             </template>
                                         </div>
@@ -101,6 +109,7 @@
                                             </div>
                                         </div>
                                     </nav>
+                                    <!-- sezione box conversazioni -->
                                     <div class="box-conversazioni overflow-auto p-5">
                                         <!-- <div>{{ contacts[activeConv].messages }}</div> -->
                                         <!-- <template v-for="contact, i in contacts"> -->
@@ -112,7 +121,7 @@
                                                                 <div class="col-12 d-flex my-1" :class="{'justify-content-end' : msg.status == 'sent', 'justify-content-start' : msg.status == 'received'}">
                                                                     <div class="box-mssg position-relative my-2" :class="{'mssg-sent' : msg.status == 'sent', 'mssg-received' : msg.status == 'received'}">
                                                                         <p class="word-break">{{ msg.message }}</p>
-                                                                        <p class="position-absolute bottom-0 end-0 my-1 mx-2 my-font-color" style="font-size: 0.7rem;">12:00</p>
+                                                                        <p class="position-absolute bottom-0 end-0 my-1 mx-2 my-font-color" style="font-size: 0.7rem;">{{ msg.time }}</p>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -122,6 +131,7 @@
                                             <!-- </template> -->
                                         <!-- </template> -->
                                     </div>
+                                    <!-- sezione input messaggi -->
                                     <div class="container">
                                         <div class="d-flex flex-row align-items-center myh-2">
                                             <div class="icons me-4">
